# wordle_solver

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  __main__.py  cli.py  setup.py
domain/: board.pyx  constants.py  guess_case.pyx  wordle.py
fortran/: score_guess.f90  wordle.f90  wordle_functions.mod
rust/: Cargo.toml
rust/src/: lib.rs
tests/: test_domain.py
wordle_solver/: __main__.py  constants.py  wordle.py
