[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.19.0"
polars = "0.32.1"
pyo3 = { version="0.19.2", features = ["extension-module"] }
pyo3-polars = "0.6.0"

